K graph done! include users and orders model event into K graph.
